[gd_scene load_steps=6 format=3 uid="uid://cr8ikhcgcuwen"]

[ext_resource type="Script" path="res://Terrain/Breakable/Floor/WeakFloor.gd" id="1_u6su2"]
[ext_resource type="Texture2D" uid="uid://ch0riwkrqwvw8" path="res://Terrain/Breakable/Floor/weakFloor.png" id="2_ogot0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0g5w"]
size = Vector2(50, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dga5k"]
size = Vector2(50, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fp18c"]
size = Vector2(50, 10)

[node name="WeakFloor" type="ColorRect"]
offset_right = 525.0
offset_bottom = 34.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_u6su2")
respawnTime = 1.0

[node name="Polygon2D" type="Polygon2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_ogot0")
polygon = PackedVector2Array(0, 0, 50, 0, 50, 50, 0, 50)

[node name="Terrain" type="StaticBody2D" parent="."]
position = Vector2(25, 0)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain"]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_u0g5w")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(25, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_dga5k")

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2(25, -5)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_fp18c")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
